# ShoppingList

./: .gitignore  .gitignore.txt  CMakeLists.txt  ListaSpesa.cpp  ListaSpesa.h  Observer.h  Prodotto.cpp  Prodotto.h  Subject.h  Utente.cpp  Utente.h  listaSpesa.cpp  listaSpesa.h  main.cpp
test/: CMakeLists.txt  ListaSpesaTest.cpp  ProdottoTest.cpp  UtenteTest.cpp  runAllTest.cpp  runAllTests.cpp
test/lib/googletest-main/: CMakeLists.txt
test/lib/googletest-main/googletest/: CMakeLists.txt
